--- a/package.json
+++ b/package.json
@@ -164,6 +164,7 @@
         "@types/vscode": "^1.40.0",
         "@typescript-eslint/eslint-plugin": "^2.18.0",
         "@typescript-eslint/parser": "^2.18.0",
+        "esbuild": "^0.13.5",
         "eslint": "^6.8.0",
         "glob": "^7.1.6",
         "mocha": "^7.0.1",
